# dl-fundamentals

./: README.md  pyproject.toml
errata/: README.md
errata/old_errata/: README.md
unit01-ml-intro/: README.ipynb  Unit1-README.md
unit01-ml-intro/1.6-perceptron-in-python/: perceptron-part1.ipynb  perceptron-part2.ipynb  perceptron-part3.ipynb
unit01-ml-intro/python-setup-guide/: README.md
unit02-pytorch-tensors/: README.ipynb  Unit2-README.md
unit02-pytorch-tensors/2.2-tensors/: torch-tensors.ipynb
unit02-pytorch-tensors/2.3-using-tensors/: top10-tensor-commands.ipynb
unit02-pytorch-tensors/2.4-linalg/: 2.4-linalg-part1.ipynb  2.4-linalg-part2.ipynb  2.4-linalg-part3.ipynb  2.4-linalg-part4.ipynb
unit02-pytorch-tensors/2.5-debugging/: 2.5-debugging.ipynb
unit02-pytorch-tensors/2.6-revisiting-perceptron/: perceptron-tensor-part1.ipynb  perceptron-tensor-part2.ipynb  perceptron-tensor-part3.ipynb
unit03-pytorch-training/: README.ipynb  Unit3-README.md
unit03-pytorch-training/3.6-logreg-in-pytorch/: logreg-part1.ipynb  logreg-part2.ipynb  logreg-part3.ipynb
unit04-multilayer-nets/: README.ipynb  Unit4-README.md
unit04-multilayer-nets/4.1-softmax/: loss-cheatsheet.md
unit04-multilayer-nets/4.4-dataloaders/: 4.4-dataloaders-part3-download-and-prep.ipynb  (+2 more)
unit05-lightning/: README.ipynb  Unit5-README.md
unit06-dl-tips/: README.ipynb  Unit6-README.md
unit07-computer-vision/: README.ipynb  Unit7-README.md
unit08-large-language-models/: Unit8-README.md
unit09-performance/: Unit9-README.md
unit10-after-training/: Unit10-README.md
(+227 files in other folders)
